v0.7 --

	* Use io{read,write} family functions.
	* Don't reclaim unused MACEISA_PAR_MERR_IRQ interrupt anymore.
	* Cosmetic changes.
	* Acknowledge changes in main kernel tree (IRQ: Maintain regs pointer
	  globally).

v0.6 -- Tue, 24 Jan 2006 21:29:47 +0100

	* Address comments from Andrew Morton <akpm_at_osdl.org>:
	  - Style: avoid single line "if" and "case" statements.
	  - Turn some printk() into pr_debug1().
	  - Add a comment about "volatile".
	  - Add a comment about readsb() and writesb().
	* Only define DEBUG_PARPORT_IP32 if it is not already defined.
	* Remove the CVS Id line.

v0.5 -- Fri, 20 Jan 2006 22:58:02 +0100

	* Address comments from Randy Dunlap <rdunlap_at_xenotime.net>:
	  - Remove useless memory barriers.
	  - Review function inlining.
	  - Review kernel docs.
	  - Fix style.
	  - Fix typos.
	* Remove useless parport_ip32_{in,out} functions.
	* Review locking in DMA operations.
	* Simplify parport_ip32_ecp_supported().
	* Fix includes.

v0.4 -- Sat, 12 Nov 2005 16:38:36 +0100

	* Add ECP mode (write_data).
	* Add EPP mode.
	* Cleanup in parport_ip32_compat_write_data().

v0.3 -- Fri, 11 Nov 2005 20:14:05 +0100

	* Add DMA support.
	* Remove useless parport_ip32_fifo_write_pio_wait().
	* Finally remove macro PRIV().
	* Remove redefinition of macro BIT() as it may introduce bugs.

v0.2.2 -- Sat, 05 Nov 2005 16:22:21 +0100

	* "Make things simple" version.
	* Change module parameters (again).    
	* Simplify probing logic.
	* Use only one member fifo instead of cFifo, ecpDFifo, and
	  tFifo in parport_ip32_regs.

v0.2.1 -- Tue, 01 Nov 2005 23:50:51 +0100

	* Fix sparse warnings.
	* Whitespace cleanup.
	* Make irq and dma module parameters as Boolean.
	* Remove useless paranoid checks about FIFO Full and Empty
	  bits set together.
	* Remove useless defines.
	* Remove compilation options.
	* Address comments from Ralf Baechle <ralf_at_linux-mips.org>:
	  - Remove CONFIG_PARPORT_IP32_FIFO.
	  - Remove declaration of mace for modules.